--- a/index.html
+++ b/index.html
@@ -1,55 +1,126 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="/ooproject.css">
-    <script src="/ooproject.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link href='https://fonts.googleapis.com/css?family=Bebas Neue' rel='stylesheet'>
+    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
-
 <body>
-    <div id="loader" class="center"></div> 
-    <div id="screen">
-        <div id="leftHalf" class="halves" class="col col-lg-6 col-sm-12">
-            <h1> <span><b>C</b></span>
-                <span><b>O</b></span>
-                <span><b>V</b></span>
-                <span><b>I</b></span>
-                <span><b>D</b></span>
+<header>
 
-                <span><b>S</b></span>
-                <span><b>I</b></span>
-                <span><b>M</b></span>
-                <span><b>U</b></span>
-                <span><b>L</b></span>
-                <span><b>A</b></span>
-                <span><b>T</b></span>
-                <span><b>I</b></span>
-                <span><b>O</b></span>
-                <span><b>N</b></span></h1>
-
-            <div id="moleculeBox"></div>
+    <nav class="navbar">
+        <div class="menu">
+            <ul>
+                <li><a href="#Home" style="text-decoration: none;">Home</a></li>
+                <li><a href="#About"style="text-decoration: none;">About</a></li>
+                <li><a href="#Projects"style="text-decoration: none;">Skills/Projects</a></li>
+            </ul>
         </div>
+    </nav>
+</header>
+<section id= "Home" style="border: #99cc32 ">
+    <div class="wrapper">
 
-        <div id="rightHalf" class="halves" class="col col-lg-6 col-sm-12">
-            <h3>PARAMETERS :</h3>
-            <div class="param">First param</div>
-            <div class="param">Second param</div>
-            <div class="param">Third param</div>
-            <div class="param">Fourth param</div>
-            <div class="param">Fifth param</div>
-            <div class="param">Sixth param</div>
-            <div class="param">Seventh param</div>
-            <div class="param">Eighth param</div>
-            <div class="param">Ninth param</div>
-            <div class="param">Tenth param</div>
+        <p id="greet">Hi,I am Atharva Karandikar</p>
+        <p id="role"> | Programmer | Web Developer | Chess Enthusiest |</p>
+        <button class="button" style="vertical-align:middle"><span><a href="#contact" style="text-decoration: none; color:burlywood;">Contact</a></span></button>
+    </div>
+    <div class = wrappertwo>
+
+        <a class="fab fa-facebook"></a>
+        <a class="fab fa-linkedin-in"></a>
+    </div>
+</section>
+<section id= "About">
+    <div class="jumbotron jumbotron-fluid" style="background-color:rgba(240, 255, 240, 0.1)">
+        <div class="container">
+            <h2 class="display-4">About me :)</h2>
+            <img id="myphoto"src="Ath.PNG">
+            <p id ="mytext">
+                <br>
+                <br>
+                <br>
+                I am an undergrad student at BITS Pilani, Goa campus pursuing major in Computer Science . I am passionate about programming and like web development, competitive coding.
+                <br>
+                Other than programming, I like to play chess, cricket and badminton. I have intrest in solving algorithmic puzzles and exploring new ideas and avenues.
+            </p> </div>
+    </div>
+
+</section>
+<section id="Projects">
+    <div class ="jumbotron jumbotron-fluid" style="background-color:rgba(240, 255, 240, 0.0)">
+        <div class="container">
+            <h2 class="display-4">Skills</h2>
+            <h3 >
+                <ul id="skills">
+                    <li>html</li>
+                    <li>css</li>
+                    <li>js</li>
+                    <li>react</li>
+                    <li>c++</li>
+                    <li>jquery</li>
+                    <li>bootstrap</li>
+                </ul>
+
+            </h3>
+            <h3> Competitive coding profiles :<a href="https://www.codechef.com/users/w_i_z_a_r_d_04">codechef</a>
+                <a href="https://codeforces.com/profile/AK_04">codeforces</a>
+            </h3>
         </div>
+    </div>
+</section>
+<section id ="contact">
+    <div class="info">
+        <hr>
+        <h1> Hello, I would be glad to get in touch with you !
+        </h1>
+        <h2>
+            Contact Me:
+        </h2>
+        <div class = "inside">
+            <p>
+                <b> Email</b>: atharvakarandikar01@gmail.com
+            </p>
+            <p>
+                <b>Phone No</b> : 7378449668
+            </p>
+            <p>
+                <b> Address</b> : x/y Golf Residency, Opp Don Bosco School , Yerwada, Pune-411005
+            </p>
+        </div>
+        <hr>
+    </div>
+
+    <div class = "connect">
+        <h2>Connect:
+        </h2>
+        <a href="https://www.facebook.com/profile.php?id=100008746152882" class="fa fa-facebook"></a>
+
+        <a href="#" class="fa fa-google"></a>
+        <a href="https://www.linkedin.com/in/atharva-karandikar-12ab221ab/" class="fa fa-linkedin"></a>
+
+        <a href="https://www.instagram.com/?hl=en" class="fa fa-instagram"></a>
+
+
+    </div>
+    <br>
+    <div class="form-group">
+        <label for="comment">Any Suggestions:</label>
+        <textarea class="form-control" rows="3" id="comment"></textarea>
+        <button type="button" class="btn btn-primary">Submit</button>
     </div>
 
 
-</body>
 
+</section>
+<section id="projects">
+
+</section>
+
+</body>
 </html>
