--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     <div class="jumbotron jumbotron-fluid" style="background-color:rgba(240, 255, 240, 0.1)">
         <div class="container">
             <h2 class="display-4">About me :)</h2>
-            <img id="myphoto"src="Ath.PNG">
+            <img id="myphoto"src="/Ath.PNG">
             <p id ="mytext">
                 <br>
                 <br>
