--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <b>Phone No</b> : 7378449668
             </p>
             <p>
-                <b> Address</b> : x/y Golf Residency, Opp Don Bosco School , Yerwada, Pune-411005
+                <b> Address</b> : 5/5 Golf Residency, Don Bosco Road , Yerwada, Pune-411005
             </p>
         </div>
         <hr>
@@ -121,7 +121,7 @@
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <small id="emailHelp" class="form-text text-muted">Email will not be shared.</small>
         </div>
         <div class="form-group">
             <label >Suggestion?</label>
