--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
     <div class = wrappertwo>
 
-        <a class="fab fa-facebook" style="text-decoration: none; margin-left: 1%;padding:-1%;color: #3b5bb5"></a>
-        <a class="fab fa-linkedin-in" style="text-decoration: none"></a>
+        <a href= "https://www.facebook.com/profile.php?id=100008746152882" class="fab fa-facebook" style="text-decoration: none; margin-left: 1%;padding:-1%;color: #3b5bb5"></a>
+        <a href= "https://www.linkedin.com/in/atharva-karandikar-12ab221ab/"class="fab fa-linkedin-in" style="text-decoration: none"></a>
     </div>
 </section>
 <section id= "About">
