--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
     <div class = wrappertwo>
 
-        <a href= "https://www.facebook.com/profile.php?id=100008746152882" class="fab fa-facebook" style="text-decoration: none; margin-left: 1%;padding:-1%;color: #3b5bb5"></a>
-        <a href= "https://www.linkedin.com/in/atharva-karandikar-12ab221ab/"class="fab fa-linkedin-in" style="text-decoration: none"></a>
+        <a class="fab fa-facebook" style="text-decoration: none; margin-left: 1%;padding:-1%;color: #3b5bb5"></a>
+        <a class="fab fa-linkedin-in" style="text-decoration: none"></a>
     </div>
 </section>
 <section id= "About">
@@ -77,13 +77,40 @@
 </section>
 <section id="Project">
     <h2 class="Project-header">Projects/Workexp</h2>
-    <ul>
-        <h3 class="cateina">Summer Intern June -July 2021 at Cateina Technologies</h3>
-        <ul class ="work">
-            Designing website layout and UI/UX for an organization using MEAN Stack for user Login, Signup and validating it.
+    <div class="container-card">
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>01</h2>
+                    <h3>Summer internship - Cateina Technologies</h3>
+                    <p>Designing website layout and UI/UX for an organization using MEAN Stack for user Login, Signup and validating it.</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </div>
 
-        </ul>
-    </ul>
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>02</h2>
+                    <h3>ColorGame</h3>
+                    <p>A simple javascript based color guessing game!</p>
+                    <a href="https://atharvakarandikar.github.io/colorgame/">Go to project</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>03</h2>
+                    <h3>Card Three</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, totam velit? Iure nemo labore inventore?</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </section>
 <section id ="contact">
