--- a/patatap/index.html
+++ b/patatap/index.html
@@ -34,7 +34,7 @@ hr{
 var data = {
 	q: {
 		sound: new Howl({
-  		urls: ['/sounds/bubbles.mp3']
+  		urls: ['sounds/bubbles.mp3']
 		}),
 		color: '#1abc9c'
 	},
