--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             <div class="box">
                 <div class="content">
                     <h2>03</h2>
-                    <h3>Card Three</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, totam velit? Iure nemo labore inventore?</p>
+                    <h3>Patatap-Clone</h3>
+                    <p>Music generator based on keys pressed</p>
                     <a href="#">Read More</a>
                 </div>
             </div>
