--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="wrapper">
 
         <p id="greet">Hi,I am Atharva!</p>
-        <p id="role"> | Snapper | Programmer | Web Developer | Chess Enthusiest |</p>
+        <p id="role"> Programmer | Web Developer | Chess Enthusiest |</p>
         <button class="button" style="vertical-align:middle"><span><a href="#contact" style="text-decoration: none; color:burlywood;">Contact</a></span></button>
     </div>
     <div class = wrappertwo>
@@ -106,7 +106,7 @@
                     <h2>03</h2>
                     <h3>Patatap-Clone</h3>
                     <p>Music generator based on keys pressed</p>
-                    <a href="#">Read More</a>
+                    <a href="https://atharvakarandikar.github.io/patatap/">Go to project</a>
                 </div>
             </div>
         </div>
