--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
 </section>
 <section id="Project">
-    <h2 class="Project-header">Projects/Workexp</h2>
+    <h2 class="Project-header display-4">Projects & Work-experience</h2>
     <div class="container-card">
         <div class="card">
             <div class="box">
