--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     </div>
     <div class = wrappertwo>
 
-        <a class="fab fa-facebook" style="text-decoration: none; margin-left: 1%;padding:-1%;color: #3b5bb5"></a>
-        <a class="fab fa-linkedin-in" style="text-decoration: none"></a>
+        <a href="https://github.com/AtharvaKarandikar" class="fab fa-github" style="margin-left: 1.25%;color: black; text-decoration: none"></a>
+        <a href="https://www.linkedin.com/in/atharva-karandikar-12ab221ab/" class="fab fa-linkedin-in" style="text-decoration: none"></a>
     </div>
 </section>
 <section id= "About">
     <div class="jumbotron jumbotron-fluid" style="background-color:rgba(240, 255, 240, 0.1)">
         <div class="container">
-            <h2 class="display-4">About me :)</h2>
+            <h2 class="display-4a">About me :)</h2>
             <img id="myphoto"src="Ath.PNG">
             <p id ="mytext">
                 <br>
@@ -54,26 +54,25 @@
 
 </section>
 <section id="Projects">
-        <div class="container">
-            <h2 class="display-4">Skills</h2>
-            <div class = "skills-grid">
-                <i class="fab fa-html5 skill-icon"></i>
-                <i class="fab fa-js-square skill-icon"></i>
-                <i class="fab fa-css3 skill-icon"></i>
-                <i class="fab fa-java skill-icon"></i>
-                <i class="fab fa-node skill-icon"></i>
-                <i class="fab fa-cuttlefish skill-icon">++</i>
-                <i class="fab fa-bootstrap skill-icon"></i>
-            </div>
-            <h3 class ="cpheader"> Coding profiles :
-                <ul class="cp">
-                    <li><a href="https://www.codechef.com/users/w_i_z_a_r_d_04" style="text-decoration: none; color: navajowhite">Codechef</a></li>
-                    <li><a href="https://codeforces.com/profile/athdon" style="text-decoration: none;color:navajowhite">Codeforces</a></li>
-                    <li><a href="https://www.hackerrank.com/Jarvis04" style="text-decoration: none; color: navajowhite">HackerRank</a></li>
-                </ul>
-
-            </h3>
+    <div class="container">
+        <h2 class="display-4">Skills</h2>
+        <div class = "skills-grid">
+            <a  style="text-decoration: none" href="https://developer.mozilla.org/en-US/docs/Web/HTML" class="fab fa-html5 skill-icon"></a>
+            <a style="text-decoration: none" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" class="fab fa-js-square skill-icon"></a>
+            <a style="text-decoration: none" href="https://developer.mozilla.org/en-US/docs/Web/CSS" class="fab fa-css3 skill-icon"></a>
+            <a style="text-decoration: none" href="https://www.oracle.com/in/java/" class="fab fa-java skill-icon"></a>
+            <a style="text-decoration: none" href="https://nodejs.org/en/" class="fab fa-node skill-icon"></a>
+            <a style="text-decoration: none" href="https://en.wikipedia.org/wiki/C%2B%2B" class="fab fa-cuttlefish skill-icon">++</a>
+            <a style="text-decoration: none" href="https://getbootstrap.com/" class="fab fa-bootstrap skill-icon"></a>
         </div>
+        <h3 class ="cpheader" style="text-align: center"> Coding profiles :
+            <a href="https://www.codechef.com/users/w_i_z_a_r_d_04" id="codechef">Codechef</a>
+            <a href="https://www.hackerrank.com/Jarvis04?h_r=internal-search&hr_r=1" id="HackerRank">HackerRank</a>
+            <a href="https://codeforces.com/profile/athdon" id="codeforces">Codeforces</a>
+
+
+        </h3>
+    </div>
 </section>
 <section id="Project">
     <h2 class="display-4">Projects & Work-experience</h2>
@@ -115,7 +114,7 @@
 </section>
 <section id ="contact">
     <div class="info">
-        <hr>
+
         <h1> Hello, I would be glad to get in touch with you !
         </h1>
         <h2>
@@ -125,18 +124,15 @@
             <p>
                 <b> Email</b>: atharvakarandikar01@gmail.com
             </p>
+
             <p>
-                <b>Phone No</b> : 7378449668
-            </p>
-            <p>
-                <b> Address</b> : 5/5 Golf Residency, Don Bosco Road , Yerwada, Pune-411005
+                <b> Address</b> : India, Pune
             </p>
         </div>
-        <hr>
     </div>
 
     <div class = "connect">
-        <h2>Connect:
+        <h2>Connect with me:
         </h2>
         <a href="https://www.facebook.com/profile.php?id=100008746152882" class="fab fa-facebook" style="text-decoration: none; color: #3b5bb5"></a>
         <a href="https://www.linkedin.com/in/atharva-karandikar-12ab221ab/" class="fab fa-linkedin-in" style="text-decoration: none"></a>
