--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
     <div class = wrappertwo>
 
-        <a href="https://github.com/AtharvaKarandikar" class="fab fa-github" style="margin-left: 1.25%;color: black; text-decoration: none"></a>
-        <a href="https://www.linkedin.com/in/atharva-karandikar-12ab221ab/" class="fab fa-linkedin-in" style="text-decoration: none"></a>
+        <a href="https://github.com/AtharvaKarandikar" class="fab fa-github" style="font-size: 5vw;margin-left: 1.25%;color: black; text-decoration: none"></a>
+        <a href="https://www.linkedin.com/in/atharva-karandikar-12ab221ab/" class="fab fa-linkedin-in" style="font-size:5vw;text-decoration: none"></a>
     </div>
 </section>
 <section id= "About">
