--- a/index.html
+++ b/index.html
@@ -98,7 +98,27 @@
                 </div>
             </div>
         </div>
-
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>02</h2>
+                    <h3>Movie-Searcher</h3>
+                    <p>Search for a movie using omdb api</p>
+                    <a href="https://github.com/AtharvaKarandikar/Movie-searcher">Github link</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>02</h2>
+                    <h3>Chat app</h3>
+                    <p>Realtime chat application using node-js and Socket.io</p>
+                    <a href="https://atharva-chat-app.herokuapp.com/">Go to project</a>
+                </div>
+            </div>
+        </div>
+        
         <div class="card">
             <div class="box">
                 <div class="content">
