--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="wrapper">
 
         <p id="greet">Hi,I am Atharva!</p>
-        <p id="role"> | Programmer | Web Developer | Chess Enthusiest |</p>
+        <p id="role"> | Programmer | Web-Developer | Chess Enthusiest |</p>
         <button class="button" style="vertical-align:middle"><span><a href="#contact" style="text-decoration: none; color:burlywood;">Contact</a></span></button>
     </div>
     <div class = wrappertwo>
