--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 
     </div>
-    <form>
+    <form action="mailto:someone@example.com" method="post" enctype="text/plain">
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
