--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@
             <div class="box">
                 <div class="content">
                     <h2>04</h2>
+                    <h3>Sortings Visualizer</h3>
+                    <p>Visualization of sorting algorithms like bubbleSort, mergeSort, insertionSort, quickSort and SelectionSort using React</p>
+                    <a href="https://sortsalgos-visualizer.herokuapp.com/">Go to project</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>05</h2>
                     <h3>Chat app</h3>
                     <p>Realtime chat application using node-js and Socket.io</p>
                     <a href="https://atharva-chat-app.herokuapp.com/">Go to project</a>
@@ -122,7 +132,7 @@
         <div class="card">
             <div class="box">
                 <div class="content">
-                    <h2>05</h2>
+                    <h2>06</h2>
                     <h3>Patatap-Clone</h3>
                     <p>Music generator based on keys pressed</p>
                     <a href="https://atharvakarandikar.github.io/patatap/">Go to project</a>
